# 5-QMLAndJavaScript

./: README.adoc
CallingJavaScriptQMLFromCpp/: CMakeLists.txt
CallingJavaScriptQMLFromCpp/include/: qmljscaller.hpp
CallingJavaScriptQMLFromCpp/qml/: Main.qml
CallingJavaScriptQMLFromCpp/src/: main.cpp  qmljscaller.cpp
